# controllers/students.js
@@ -17,8 +17,8 @@ const getAllStudents = async (req,res) => {
 
 const getStudentById = async (req, res, next) => {
     //#swagger.tags=['Students']
-    const studentId = new ObjectId(req.params.id);
     try {
+        const studentId = new ObjectId(req.params.id);
         const result = await mongodb.getDatabase().db().collection('students').find({_id: studentId});
         result.toArray().then((students) => {
             if (!students[0]) {
@@ -62,51 +62,62 @@ const addStudent = async (req, res, next) => {
 
 const updateStudent = async (req, res, next) => {
     //#swagger.tags=['Students']
-    const studentId = new ObjectId(req.params.id); 
-    const result = await mongodb.getDatabase().db().collection('students');
-    result.findOneAndUpdate(
-        {_id: studentId}, 
-        {
-            $set: {
-                student_firstName: req.body.student_firstName, 
-                student_lastName: req.body.student_lastName, 
-                student_age: req.body.student_age, 
-                student_gender: req.body.student_gender, 
-                student_email: req.body.student_email,
-                class_id: req.body.class_id, 
+    try {
+        const studentId = new ObjectId(req.params.id); 
+        const result = await mongodb.getDatabase().db().collection('students');
+        result.findOneAndUpdate(
+            {_id: studentId}, 
+            {
+                $set: {
+                    student_firstName: req.body.student_firstName, 
+                    student_lastName: req.body.student_lastName, 
+                    student_age: req.body.student_age, 
+                    student_gender: req.body.student_gender, 
+                    student_email: req.body.student_email,
+                    class_id: req.body.class_id, 
+                }, 
             }, 
-        }, 
-        {
-            upsert: false,
-        }
-    )
-    .then((result) => {
-        if (!result) {
-            return next(createError(404, 'student does not exist'))
-        }
-        console.log(result);
-    })
-    .catch((error) => {
+            {
+                upsert: false,
+            }
+        )
+        .then((result) => {
+            if (!result) {
+                return next(createError(404, 'student does not exist'))
+            }
+            res.setHeader('Content-Type', 'application/json');
+            res.status(204).send();
+        })
+        .catch((error) => {
+            console.log(error.message);
+            next(error);
+        });
+    } catch (error) {
         console.log(error.message);
         next(error);
-    });
+    }
 }
 
 const deleteStudent = async (req, res, next) => {
     //#swagger.tags=['Students']
-    const studentId = new ObjectId(req.params.id); 
-    const result = await mongodb.getDatabase().db().collection('students');
-    result.findOneAndDelete({_id: studentId})
-    .then((result) => {
-        if (!result) {
-            return next(createError(404, 'student does not exist'))
-        }
-        res.status(204).json({message:"Contact Deleted" });
-    })
-    .catch((error) => {
+    try {
+        const studentId = new ObjectId(req.params.id); 
+        const result = await mongodb.getDatabase().db().collection('students');
+        result.findOneAndDelete({_id: studentId})
+        .then((result) => {
+            if (!result) {
+                return next(createError(404, 'Student does not exist'))
+            }
+            res.status(204).json({message:"Student Deleted" });
+        })
+        .catch((error) => {
+            console.log(error.message);
+            next(error);
+        });
+    } catch (error) {
         console.log(error.message);
         next(error);
-    });
+    }
 }
 
 module.exports = { getAllStudents, getStudentById, addStudent, updateStudent, deleteStudent }
